; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/initdb/extr_findtimezone.c_perfect_timezone_match.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/initdb/extr_findtimezone.c_perfect_timezone_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tztry = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.tztry*)* @perfect_timezone_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @perfect_timezone_match(i8* %0, %struct.tztry* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.tztry*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.tztry* %1, %struct.tztry** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load %struct.tztry*, %struct.tztry** %4, align 8
  %7 = call i64 @score_timezone(i8* %5, %struct.tztry* %6)
  %8 = load %struct.tztry*, %struct.tztry** %4, align 8
  %9 = getelementptr inbounds %struct.tztry, %struct.tztry* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %7, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @score_timezone(i8*, %struct.tztry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
